--- a/Practica2.tex
+++ b/Practica2.tex
@@ -37,6 +37,8 @@ $q_2$    & $q_2$ & $q_2$ &  &
 \end{tabular}
 \end{table}
 
+\newpage
+
 \begin{enumerate}
 \setcounter{enumi}{1}
 \item Test the automaton that you have created by introducing 6 chains.
@@ -90,6 +92,7 @@ $q_2$    & $q_2$ & $q_2$ &  &
 \centering{\textit{Prueba de la cadena "bababbaa"}}
 \end{figure}
 
+\newpage
 \section*{Ejercicio 2}
 Finite automaton in Octave:
 
